AArch64: fix virtual threads with -XX:UseBranchProtection=pac-ret

XMLWordPrintable

    • b17
    • aarch64

        The continuation freeze/thaw mechanism introduced with Loom moves the thread stack in memory. However when PAC is enabled on supported AArch64 CPUs, the saved LR on the stack contains a pointer authentication code signed with the stack pointer at the time the frame was created. After relocating a frame, we need to re-sign the LR with the new stack pointer.

              Assignee:
              Hao Sun
              Reporter:
              Nick Gasson
              Votes:
              0 Vote for this issue
              Watchers:
              15 Start watching this issue

                Created:
                Updated:
                Resolved: