src/hotspot/cpu/s390/continuationHelper_s390.inline.hpp
@@ -58,6 +58,10 @@ inline void ContinuationHelper::push_pd(const frame& f) {
   Unimplemented();
 }
 
+inline address ContinuationHelper::return_pc_at(intptr_t *sp) {
+  return *(address*)sp;
+}
+
 inline void ContinuationHelper::set_anchor_to_entry_pd(JavaFrameAnchor* anchor, ContinuationEntry* cont) {
   Unimplemented();
 }
