src/hotspot/share/runtime/continuationHelper.hpp
@@ -44,6 +44,8 @@ public:
 
   static inline void push_pd(const frame& f);
 
+  static inline address return_pc_at(intptr_t *sp);
+
   static inline int frame_align_words(int size);
   static inline intptr_t* frame_align_pointer(intptr_t* sp);
 
@@ -68,7 +70,7 @@ public:
   static inline address real_pc(const frame& f);
   static inline void patch_pc(const frame& f, address pc);
   static address* return_pc_address(const frame& f);
-  static address return_pc(const frame& f) { return *return_pc_address(f); }
+  static address return_pc(const frame& f);
   static bool is_stub(CodeBlob* cb);
 
 #ifdef ASSERT
